<resources>
    <string name="app_name">z</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="all">All</string>
    <string name="video">Video</string>
    <string name="music">Music</string>
    <string name="book">Book</string>
    <string name="compressed">Compressed</string>
    <string name="search">search</string>
    <string name="reload">reload</string>
</resources>
